--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,3 @@
 ---
-# defaults file for ansible-role-gitlab-runner-docker-executor
+GITLAB_URL: http://192.168.88.10
+GITLAB_CLONE_URL: "{{ GITLAB_URL }}"
