update command register gitlab

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: "Gitlab verify"
   shell: 
-    cmd: gitlab-runner verify --name {{ inventory_hostname }}-docker-executor
+    cmd: gitlab-runner verify --name {{ inventory_hostname }}-docker
   register: gitlab_runner_exist
   failed_when: false
 
 - name: "Gitlab register docker executor"
   shell: 
-    cmd: gitlab-runner register -r={{ gitlab_register_token }} --name={{ inventory_hostname }}-docker-executor  --non-interactive --url={{ GITLAB_URL }} --clone-url={{ GITLAB_CLONE_URL }}  --executor=docker --docker-image="alpine:latest"  --docker-disable-entrypoint-overwrite=false --docker-oom-kill-disable=false  --env="DOCKER_TLS_CERTDIR=" --docker-privileged=true --tag-list="docker"
+    cmd: gitlab-runner register -r={{ gitlab_register_token }} --name={{ inventory_hostname }}-docker  --non-interactive --url={{ gitlab_url }} --clone-url={{ gitlab_clone_url }}  --executor=docker --docker-image="alpine:latest" --docker-tlsverify=false --docker-disable-entrypoint-overwrite=false --docker-oom-kill-disable=false  --env="DOCKER_TLS_CERTDIR=" --docker-privileged=true --tag-list="docker" --docker-extra-hosts={{ gitlab_runner_extra_host }} --docker-volumes={{ gitlab_runner_docker_volumes }}
   when: gitlab_runner_exist.rc == 1
