--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-GITLAB_URL: http://192.168.88.10
-GITLAB_CLONE_URL: "{{ GITLAB_URL }}"
+gitlab_url: http://192.168.88.10
+gitlab_clone_url: "{{ gitlab_url }}"
