--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,14 @@
 ---
 - hosts: ["all"]
   become: true
+  vars:
+    nexus_oss_ip: 10.12.12.5
+    gitlab_register_token: default-token-runner
+    gitlab_url: http://10.12.12.1
+    gitlab_runner_extra_host: 
+      - private.nexus-registry.docker.local:{{ nexus_oss_ip }}
+    gitlab_runner_docker_volumes: 
+      - /certs/client
+      - /cache
   roles:
-    - ../../ansible-role-gitlab-runner-docker-executor
+    - role: "../../ansible-role-gitlab-runner-register-docker"
