--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 gitlab_url: http://192.168.88.10
 nexus_oss_ip: 10.12.12.5
-gitlab_clone_url: {{ gitlab_url }}
+gitlab_clone_url: "{{ gitlab_url }}"
 gitlab_register_token: default-token-runner
 gitlab_runner_extra_host: 
   - private.nexus-registry.docker.local:{{ nexus_oss_ip }}
