--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@ gitlab_url: http://192.168.88.10
 nexus_oss_ip: 10.12.12.5
 gitlab_clone_url: "{{ gitlab_url }}"
 gitlab_register_token: default-token-runner
+gitlab_private_access_token: "<change-me>" # generate the access token from gitlab on personal access token, see tutorial below
 gitlab_runner_extra_host: 
   - private.nexus-registry.docker.local:{{ nexus_oss_ip }}
 gitlab_runner_docker_volumes: 
