--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,13 +2,14 @@
 - hosts: ["all"]
   become: true
   vars:
-    nexus_oss_ip: 10.12.12.5
-    gitlab_register_token: default-token-runner
-    gitlab_url: http://10.12.12.1
+    gitlab_address: 10.10.30.50
     gitlab_runner_extra_host: 
-      - private.nexus-registry.docker.local:{{ nexus_oss_ip }}
+      - 'private.nexus-registry.docker.local:10.10.30.55'
     gitlab_runner_docker_volumes: 
-      - /certs/client
-      - /cache
+      - '/var/run/docker.sock:/var/run/docker.sock'
+      - '/certs/client'
+      - '/certs/ca'
+      - '/cache'
+    gitlab_private_access_token: "test-token"
   roles:
-    - role: "../../ansible-role-gitlab-runner-register-docker"
+    - role: "../../ansible-role-gitlab-runner-docker-executor"
